css/style1.css
/* ... */
.nav a.active {
    background-color: #fff;
    color: #444;
    cursor: default
}
.nav {
    width: 100%;
    background-color: #000;
    opacity: .888;
    z-index: 100;
}
#menuicon {
    display:none;
    position: fixed;
    right: 5%;
    top: 5%;
    z-index: 100;
}

.separator {
    /*FIX AND PUT BACK*/
    /*background-image: url(../images/graphics/banner_div.png);
    background-repeat: repeat-x;
    background-size: contain;
    height: 256px;*/

    /*Temporary separator*/
    background-color: #ABB2BF;
    height: 64px;

}



section {
    display: block;
    height: 100%;
    width: 100%;
    padding-top: 2em;
    padding-bottom: 4em;
    box-sizing: border-box;
}

#sect1 {
    background-image: url(../images/bg.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    padding: 5em;
    text-align: center;
}
#sect2,#sect3,#sect4,#sect5,#sect6 {

    padding-left: 10%;
    padding-right: 10%;
}

.gist-data {
    background-color: #000000
}

a {
    text-decoration: none;
}

.map {
    display: block;
    opacity: .666;
    text-align : center;
    position: relative;
    left: auto;
    right: auto;
    margin-right: auto;
    margin-left: auto;
    padding-top: 1em;
}

.Subline {
    /*The line below the logo in section 1*/
    font-size: 125%;
    width: 50%;
    margin: auto;
}

#Logo {
    padding-top: 5em;
}

h1 {
    position: relative;
    z-index: 3;
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    width: auto;
    text-align: center;
    margin-top: 1em;
    margin-bottom: 1em;
    padding: 0.5em;
    color: #ABB2BF;
    font-size: 2em;
    border: 0.4em solid #303030;
    border-radius: 0 12.5em 0 12.5em;
    -moz-border-radius: 0 12.5em;
    -webkit-border-radius: 0 12.5em 0 12.5em;
}
h2 {
    text-align: center;
    padding-bottom: 20px;
}
h3 {
    /**/
}
#quote {
    text-align: center;
    font-style: italic;
}
p {
    padding: 0.5em;
    padding-top: 1em;
    text-align: justify;
}

strong, .strongcountdown {
    color: #FFF;
    font-weight: 400;
}

/*#agendaimg {
    display: block;
    max-width: 90%;
    max-height: 90%;
    padding: 10px;
    padding-top: 4%;
    opacity: .6;
}*/

.copyright {
    position: fixed;
    left: 0;
    right: 0;
    margin-right: auto;
    margin-left: auto;
    bottom: 0;
    z-index: 10;
    text-align: center;
    background-color: #000;
    opacity: .666;
    font-size: 75%;
}
.copyright a {
    color: #f50a2c;
    font-weight: 700;
    text-decoration: none;
}

#signuptoggler {
    width:100%;
    margin: 1em;
    margin-left: auto;
    margin-right: auto;
    left:0;
    right:0;
    text-align: center;
}

.signup {
    position: fixed;
    left: 1em;
    right: 1em;
    top:25%;

    margin-right: auto;
    margin-left: auto;

    z-index: 20;
    padding: 25px 50px 50px 50px;
    color: #1B1C1E;
    background-color: #EEE;
    opacity: 0.85;
    resize: both;
    overflow: auto;

    visibility: hidden;
    display: none;
}


input[type="text"] {
    display: inline;
    margin: 0;
    font-size: 20px;
    appearance: none;
    box-shadow: none;
    border-radius: none;
    padding: 10px;
    border: solid 5px #c9c9c9;
    transition: border 0.3s, background-color 0.3s;
    outline: none;
}
input[type="text"]:focus {
    border: solid 5px #969696;
    background-color: #000000;
    color: #ABB2BF;
}

.submitter {
    display: block;
    font-size: 24px;
    position: absolute;
    right: 0;
    top: 0;
    width: 16em;
    height: 100%;
    float: right;
    appearance: none;
    box-shadow: none;
    border-radius: none;
    padding: 10px;
    border: none;
}

button:hover, .submitter:hover {
    background-color: #005f5f;
    color: #ABB2BF;
    border: solid 5px #969696;
}
button{
    appearance: none;
    box-shadow: none;
    border-radius: none;
    padding: 10px;
    border: none;
    border: solid 5px #c9c9c9;
    transition: border 0.3s, background-color 0.3s;
}

#xButton {
    position: static;
    height: 2em;
    width: 2em;
    text-align: center;
    top: 0;
    left: 0;
    padding: 1em;
    margin: 0;
}
#xButton:hover {
    background-color: #FF4444;
}


#infocontainer {
    padding-top: 1em;
}
#phoneinfo, #emailinfo, #maptoggle{
    float: left;
    text-align: center;
    color: #1B1C1E;
    background-color: #EEEEEE;
    //width: 25%;
    padding: 2%;
    align-items: center;
    border: solid 1em #c9c9c9;
    transition: background-color 0.3s, border-color 1s;
}
#maptoggle{
    width: 60%;
}
#phoneinfo:hover, #emailinfo:hover, #maptoggle:hover{
    background-color: #005f5f;
    border-color: #969696;
}
.contactcol {
    display: block;
    float: left;
    margin: 1% 0 1% 1.6%;
}

.contactcol:first-child {
    margin-left: 0;
}

label {
    width: 200px;
    display: inline-block;
    text-align: right;

}

.inputfield {
    padding: 5px;
}

#agendaviewer {
    /*padding-top: 1em;*/
}
ul[class="droplist"]>li {
    background-color: #1B1C1E;
    color: #EEEEEE;
    font-size: 1em;
    list-style: none;
    border: 1px solid;
    border-color: #EEEEEE;
    padding: 1.25em;
    padding-left: 4em;
    margin: 1em;
    margin-left: 0.5em;
    transition: background-color 0.5s;
}
ul[class="droplist"]>li:hover {
    background-color: #EEEEEE;
    color: #1B1C1E;
}
ul[class="droplist"]>li:hover > div[class="description"] {
    /*On hover*/
    max-height: 10em;
    /*transition: max-height 3s;*/
}
ul[class="droplist"]>li>div[class="description"] {
    /*Default*/
    overflow: hidden;
    max-height: 0;
    transition: max-height 1s;
}
ul[class="droplist"]>li>div[class="description"]>p {
    
}
ul[class="droplist"]>li>div[class="heading"] {
    display: inline-block;
}
ul[class="droplist"]>li>div[class="headingright"] {
    display: inline-block;
    float:right;
    padding-right: 2em;
}
ul#rules {
    padding-left: 3%;
}
/* ... */

